--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "ordinales-js",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "Librería para convertir números cardinales en ordinales",
   "main": "index.js",
   "scripts": {
+    "build": "babel src --out-dir dist",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -30,5 +31,13 @@
   "bugs": {
     "url": "https://github.com/AndresSaa/ordinales-js/issues"
   },
-  "homepage": "https://github.com/AndresSaa/ordinales-js#readme"
+  "homepage": "https://github.com/AndresSaa/ordinales-js#readme",
+  "devDependencies": {
+    "@babel/cli": "^7.2.3",
+    "@babel/core": "^7.4.0",
+    "@babel/preset-env": "^7.4.2"
+  },
+  "dependencies": {
+    "@babel/polyfill": "^7.4.0"
+  }
 }
