remove @babel/polyfill

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ordinales-js",
-  "version": "1.0.9",
+  "version": "1.0.10",
   "description": "Librería para convertir números cardinales en ordinales",
   "main": "index.js",
   "scripts": {
@@ -38,10 +38,7 @@
     "@babel/core": "^7.4.0",
     "@babel/preset-env": "^7.4.2",
     "babel-eslint": "^10.0.1",
-    "core-js": "^3.0.0",
     "eslint": "^5.16.0"
   },
-  "dependencies": {
-    "@babel/polyfill": "^7.4.0"
-  }
+  "dependencies": {}
 }
