--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,29 @@
+# Mac files
 .DS_Store
-node_modules
-/dist/*
-npm-debug*
+
+# Dependency directories
+node_modules/
+
+# Dist directory
+dist/
+
+# Optional npm cache directory
+.npm
+
+# Coverage directory used by tools like istanbul
 coverage
+
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Yarn
+yarn-error.log
+.pnp/
+.pnp.js
+
+# Yarn Integrity file
+.yarn-integrity
